--- a/FirstSample/MySampleReceiver/App.config
+++ b/FirstSample/MySampleReceiver/App.config
@@ -24,9 +24,7 @@
     </MessageEndpointMappings>
   </UnicastBusConfig>-->
   <UnicastBusConfig>
-    <MessageEndpointMappings>
-      <add Assembly="SampleMessages" Endpoint="MySampleReceiver" />
-    </MessageEndpointMappings>
+    <MessageEndpointMappings />
   </UnicastBusConfig>
   <!--<AuditConfig 
     QueueName="The address to which messages received will be forwarded."
