--- a/FirstSample/MySampleReceiver/MySampleReceiver.csproj
+++ b/FirstSample/MySampleReceiver/MySampleReceiver.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9CE707BB-9991-4047-AAFC-DECBB0860C71}</ProjectGuid>
+    <ProjectGuid>{86C840AC-5615-4C17-8D21-F76CBB01F52A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MySampleSender</RootNamespace>
-    <AssemblyName>MySampleSender</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <RootNamespace>MySampleReceiver</RootNamespace>
+    <AssemblyName>MySampleReceiver</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -51,9 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AMessageHandler.cs" />
     <Compile Include="EndpointConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StartupTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
