--- a/FirstSample/MySampleSender/packages.config
+++ b/FirstSample/MySampleSender/packages.config
@@ -3,4 +3,5 @@
   <package id="NServiceBus" version="4.6.3" targetFramework="net451" />
   <package id="NServiceBus.Host" version="4.6.3" targetFramework="net451" />
   <package id="NServiceBus.Interfaces" version="4.6.3" targetFramework="net451" />
+  <package id="Radical" version="1.4.3.1" targetFramework="net451" />
 </packages>
