--- a/NSB01SampleSender/App.config
+++ b/NSB01SampleSender/App.config
@@ -5,21 +5,16 @@
     <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
     <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
   </configSections>
-
   <appSettings>
     <add key="Raven/CompiledIndexCacheDirectory" value="~\..\RavenDB\CompiledIndexCache" />
   </appSettings>
-  
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
-
   <UnicastBusConfig>
     <MessageEndpointMappings>
       <add Assembly="NSB01SampleMessages" Endpoint="NSB01SampleReceiver" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
-  
   <AuditConfig QueueName="audit" />
-  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -49,6 +44,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.WindowsAzure.Storage" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NServiceBus" publicKeyToken="9fc386479f8a226c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.6.5.0" newVersion="4.6.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.6.5.0" newVersion="4.6.5.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
