--- a/NSB03SampleSender/App.config
+++ b/NSB03SampleSender/App.config
@@ -8,31 +8,17 @@
   <appSettings>
     <add key="Raven/CompiledIndexCacheDirectory" value="~\..\RavenDB\CompiledIndexCache" />
   </appSettings>
-  <!--<MessageForwardingInCaseOfFaultConfig 
-    ErrorQueue="The queue to which errors will be forwarded." />-->
+  
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
-  <!--<UnicastBusConfig 
-    DistributorControlAddress="The address for sending control messages to the distributor."
-    DistributorDataAddress="The distributor's data address, used as the return address of messages sent by this endpoint."
-    TimeoutManagerAddress="The address that the timeout manager will use to send and receive messages." >
-    <MessageEndpointMappings>
-      To register all message types defined in an assembly:
-      <add Assembly="assembly" Endpoint="queue@machinename" />
-      
-      To register all message types defined in an assembly with a specific namespace (it does not include sub namespaces):
-      <add Assembly="assembly" Namespace="namespace" Endpoint="queue@machinename" />
-      
-      To register a specific type in an assembly:
-      <add Assembly="assembly" Type="type fullname (http://msdn.microsoft.com/en-us/library/system.type.fullname.aspx)" Endpoint="queue@machinename" />
-    </MessageEndpointMappings>
-  </UnicastBusConfig>-->
+  
   <UnicastBusConfig>
-    <MessageEndpointMappings />
+    <MessageEndpointMappings>
+      <add Assembly="NSB03SampleMessages" Endpoint="NSB03SampleReceiver" />
+    </MessageEndpointMappings>
   </UnicastBusConfig>
-  <!--<AuditConfig 
-    QueueName="The address to which messages received will be forwarded."
-    OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
+  
   <AuditConfig QueueName="audit" />
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
