--- a/NSB03SampleSender/packages.config
+++ b/NSB03SampleSender/packages.config
@@ -8,6 +8,7 @@
   <package id="NServiceBus" version="4.6.5" targetFramework="net45" />
   <package id="NServiceBus.Host" version="4.6.5" targetFramework="net45" />
   <package id="NServiceBus.Interfaces" version="4.6.5" targetFramework="net45" />
+  <package id="Radical" version="1.4.3.1" targetFramework="net45" />
   <package id="RavenDB.Client" version="2.5.2916" targetFramework="net45" />
   <package id="RavenDB.Database" version="2.5.2916" targetFramework="net45" />
   <package id="RavenDB.Embedded" version="2.5.2916" targetFramework="net45" />
