--- a/NSB05ShippingService.Messages/NSB05ShippingService.Messages.csproj
+++ b/NSB05ShippingService.Messages/NSB05ShippingService.Messages.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D0752BE4-B44B-43D3-AB39-FF93D0345179}</ProjectGuid>
+    <ProjectGuid>{FB3D80B6-761E-4BFD-B6C8-A07B959EAE20}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NSB05SampleMessages</RootNamespace>
-    <AssemblyName>NSB05SampleMessages</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>NSB05ShippingService.Messages</RootNamespace>
+    <AssemblyName>NSB05ShippingService.Messages</AssemblyName>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -39,14 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\CollectItemsForShipping.cs" />
-    <Compile Include="Events\IOrderProcessingDelayed.cs" />
-    <Compile Include="Events\IShoppingCartCheckedout.cs" />
-    <Compile Include="Events\IItemsCollected.cs" />
-    <Compile Include="Events\IOrderCreated.cs" />
-    <Compile Include="ProcessingDelayReason.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Timeouts\ItemCollectionTimeout.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
