--- a/NSB05WarehouseService/app.config
+++ b/NSB05WarehouseService/app.config
@@ -5,6 +5,13 @@
     <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
     <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
   </configSections>
+
+
+
+  <appSettings>
+    <add key="Raven/CompiledIndexCacheDirectory" value="~\..\RavenDB\CompiledIndexCache" />
+  </appSettings>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
