--- a/NSB05Customer/NSB05Customer.csproj
+++ b/NSB05Customer/NSB05Customer.csproj
@@ -93,10 +93,17 @@
   <ItemGroup>
     <Compile Include="EndpointConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NSB05Customer.Messages\NSB05Customer.Messages.csproj">
+      <Project>{e3870926-f9f8-4eaa-885e-90b8184cbe70}</Project>
+      <Name>NSB05Customer.Messages</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
