Saga sample WIP

--- a/NSB05OrderManager/App.config
+++ b/NSB05OrderManager/App.config
@@ -15,6 +15,7 @@
   <UnicastBusConfig>
     <MessageEndpointMappings>
       <add Assembly="NSB05Customer.Messages" Endpoint="NSB05Customer" />
+      <add Assembly="NSB05WarehouseService.Messages" Endpoint="NSB05WarehouseService" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
   
