--- a/NSB05OrderManager/NSB05OrderManager.csproj
+++ b/NSB05OrderManager/NSB05OrderManager.csproj
@@ -113,6 +113,10 @@
       <Project>{9e1c03ae-dc4c-4769-b918-c644d9fe7c6c}</Project>
       <Name>NSB05OrderManager.Messages</Name>
     </ProjectReference>
+    <ProjectReference Include="..\NSB05WarehouseService.Messages\NSB05WarehouseService.Messages.csproj">
+      <Project>{87defbfc-5b27-4b21-aa62-a4991fca346c}</Project>
+      <Name>NSB05WarehouseService.Messages</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
