--- a/NSB05CustomerCare/app.config
+++ b/NSB05CustomerCare/app.config
@@ -50,6 +50,7 @@
   <UnicastBusConfig>
     <MessageEndpointMappings>
       <add Assembly="NSB05OrderManager.Messages" Endpoint="NSB05OrderManager"/>
+      <add Assembly="NSB05ShippingService.Messages" Endpoint="NSB05ShippingService" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
   
