--- a/NSB05OrderManager/App.config
+++ b/NSB05OrderManager/App.config
@@ -16,6 +16,7 @@
     <MessageEndpointMappings>
       <add Assembly="NSB05Customer.Messages" Endpoint="NSB05Customer" />
       <add Assembly="NSB05WarehouseService.Messages" Endpoint="NSB05WarehouseService" />
+      <add Assembly="NSB05ShippingService.Messages" Endpoint="NSB05ShippingService" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
   
