--- a/NSB05OrderManager/NSB05OrderManager.csproj
+++ b/NSB05OrderManager/NSB05OrderManager.csproj
@@ -113,6 +113,10 @@
       <Project>{9e1c03ae-dc4c-4769-b918-c644d9fe7c6c}</Project>
       <Name>NSB05OrderManager.Messages</Name>
     </ProjectReference>
+    <ProjectReference Include="..\NSB05ShippingService.Messages\NSB05ShippingService.Messages.csproj">
+      <Project>{fb3d80b6-761e-4bfd-b6c8-a07b959eae20}</Project>
+      <Name>NSB05ShippingService.Messages</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NSB05WarehouseService.Messages\NSB05WarehouseService.Messages.csproj">
       <Project>{87defbfc-5b27-4b21-aa62-a4991fca346c}</Project>
       <Name>NSB05WarehouseService.Messages</Name>
