--- a/NSB05ShippingService.Messages/NSB05ShippingService.Messages.csproj
+++ b/NSB05ShippingService.Messages/NSB05ShippingService.Messages.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ShipOrder.cs" />
+    <Compile Include="Events\IOrderShipped.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
