--- a/CQRS/Web.config
+++ b/CQRS/Web.config
@@ -8,6 +8,7 @@
 
   </configSections>
   <connectionStrings>
+    <add name="CQRS/Persistence" connectionString="Url = http://localhost:8080; Database=WPC-ARC004" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
