--- a/CQRS/packages.config
+++ b/CQRS/packages.config
@@ -24,5 +24,6 @@
   <package id="Radical.Bootstrapper" version="0.0.3.4" targetFramework="net452" />
   <package id="Radical.Bootstrapper.Windsor" version="0.0.3.7" targetFramework="net452" />
   <package id="Radical.Bootstrapper.Windsor.AspNet" version="0.0.1.5-Beta" targetFramework="net452" />
+  <package id="RavenDB.Client" version="3.0.3507-Unstable" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
