--- a/CQRS.Views/CQRS.Views.csproj
+++ b/CQRS.Views/CQRS.Views.csproj
@@ -30,8 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Radical">
-      <HintPath>..\packages\Radical.1.5.0.0-alfa\lib\net45\Radical.dll</HintPath>
+    <Reference Include="Radical, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Radical.1.5.0.0\lib\net45\Radical.dll</HintPath>
     </Reference>
     <Reference Include="Raven.Abstractions">
       <HintPath>..\packages\RavenDB.Client.3.0.3507-Unstable\lib\net45\Raven.Abstractions.dll</HintPath>
@@ -51,6 +52,7 @@
   <ItemGroup>
     <Compile Include="CompanyView.cs" />
     <Compile Include="Indexes\FullText_Search.cs" />
+    <Compile Include="Indexes\Company_CompanyView_Transformer.cs" />
     <Compile Include="Indexes\Person_PersonView_Transformer.cs" />
     <Compile Include="PagedResultsView.cs" />
     <Compile Include="PagingHelper.cs" />
