--- a/CQRS.Views/packages.config
+++ b/CQRS.Views/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Radical" version="1.5.0.0-alfa" targetFramework="net452" />
+  <package id="Radical" version="1.5.0.0" targetFramework="net452" />
   <package id="RavenDB.Client" version="3.0.3507-Unstable" targetFramework="net452" />
 </packages>
