--- a/CQRS/packages.config
+++ b/CQRS/packages.config
@@ -5,7 +5,7 @@
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
   <package id="Jason" version="0.4.0.1-Beta" targetFramework="net452" />
   <package id="Jason.Tools" version="0.4.0.1-Beta" targetFramework="net452" />
-  <package id="Jason.WebAPI" version="0.5.1.1-Beta-3" targetFramework="net452" />
+  <package id="Jason.WebAPI" version="0.5.1.1-Beta-5" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
@@ -20,7 +20,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="Radical" version="1.5.0.0-alfa" targetFramework="net452" />
+  <package id="Radical" version="1.5.0.0" targetFramework="net452" />
   <package id="Radical.Bootstrapper" version="0.0.3.4" targetFramework="net452" />
   <package id="Radical.Bootstrapper.Windsor" version="0.0.3.7" targetFramework="net452" />
   <package id="Radical.Bootstrapper.Windsor.AspNet" version="0.0.1.5-Beta" targetFramework="net452" />
